GNOME Bugzilla – Bug 796243
examples/c/ges-ui.c:109 GTK 3 has no GtkObject
Last modified: 2018-05-21 08:33:57 UTC
Compiling gstreamer-editing-services-1.14.1 for GTK 3 fails with in examples/c with: CC ges-ui.o ges-ui.c:109:34: error: unknown type name ‘GtkObject’; did you mean ‘AtkObject’? gboolean window_delete_event_cb (GtkObject * window, GdkEvent * event, ^~~~~~~~~ AtkObject and GtkObject was removed in GTK+-2.91.0.
Created attachment 372255 [details] [review] examples: fix gtk2-isms, drop -Werror for examples and drop gtk2 option
Review of attachment 372255 [details] [review]: Thanks.
commit e813af108214a6a771707a187db8dc27b5880b34 (HEAD -> master) Author: Tim-Philipp Müller <tim@centricular.com> Date: Sun May 20 23:48:39 2018 +0100 examples: override -Werror Don't want to error out on deprecated API warnings and such. Just drop -Werror for the examples until someone updates them to recent gtk3 API. Maybe showing the warnings will movivate someone. https://bugzilla.gnome.org/show_bug.cgi?id=796243 commit 6c26b44f465fe2fd74d68910d1f3c3727f36fb4c Author: Tim-Philipp Müller <tim@centricular.com> Date: Sun May 20 23:47:14 2018 +0100 examples: always build against gtk3 Drop gtk2 option. https://bugzilla.gnome.org/show_bug.cgi?id=796243 commit 76f3dcb8f11a240fc7147ab556c57f10abc9e957 Author: Tim-Philipp Müller <tim@centricular.com> Date: Sun May 20 23:46:42 2018 +0100 examples: ges-ui: fix some gtk2-ism Still lots of deprecated API to update. https://bugzilla.gnome.org/show_bug.cgi?id=796243