examples: ges-ui: fix some gtk2-ism

Still lots of deprecated API to update.

https://bugzilla.gnome.org/show_bug.cgi?id=796243